--- a/latest.yaml
+++ b/latest.yaml
@@ -2,5 +2,7 @@
 廣州城	gwong2 zau1 sing4
 海心橋	hoi2 sam1 kiu4
 羅馬人	lo4 maa5 jan4
+漁舟	jyu4 zau1
+漁舟唱晚	jyu4 zau1 coeng3 maan5
 精羅	zing1 lo4
 精神羅馬人	zing1 san4 lo4 maa5 jan4
