--- a/latest.yaml
+++ b/latest.yaml
@@ -1,10 +1,16 @@
 不死鳥	bat1 sei2 niu5
 廣州城	gwong2 zau1 sing4
 海心橋	hoi2 sam1 kiu4
-羅馬人	lo4 maa5 jan4
 漁歌	jyu4 go1
 漁歌晚唱	jyu4 go1 maan5 coeng3
 漁舟	jyu4 zau1
 漁舟唱晚	jyu4 zau1 coeng3 maan5
+粵語歌	jyut6 jyu5 go1
+粵語歌曲	jyut6 jyu5 go1 kuk1
+粵語音樂	jyut6 jyu5 jam1 ngok6
+粵語音韻	jyut6 jyu5 jam1 wan6
+粵語音韻學	jyut6 jyu5 jam1 wan5 hok6
+粵樂	jyut6 ngok6
+羅馬人	lo4 maa5 jan4
 精羅	zing1 lo4
 精神羅馬人	zing1 san4 lo4 maa5 jan4
