添加「私隱政策」

--- a/latest.yaml
+++ b/latest.yaml
@@ -12,5 +12,6 @@
 粵語音韻學	jyut6 jyu5 jam1 wan5 hok6
 粵樂	jyut6 ngok6
 羅馬人	lo4 maa5 jan4
+私隱政策	si1 jan2 zing3 caak3
 精羅	zing1 lo4
 精神羅馬人	zing1 san4 lo4 maa5 jan4
