添加「海森伯格」

--- a/latest.yaml
+++ b/latest.yaml
@@ -1,6 +1,7 @@
 不死鳥	bat1 sei2 niu5
 廣州城	gwong2 zau1 sing4
 海心橋	hoi2 sam1 kiu4
+海森伯格	hoi2 sam1 baak3 gaak3
 漁歌	jyu4 go1
 漁歌晚唱	jyu4 go1 maan5 coeng3
 漁舟	jyu4 zau1
