--- a/latest.yaml
+++ b/latest.yaml
@@ -1,5 +1,6 @@
 不死鳥	bat1 sei2 niu5
 春秋筆法	ceon1 cau1 bat1 faat3
+管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
 海心橋	hoi2 sam1 kiu4
 海森伯格	hoi2 sam1 baak3 gaak3
@@ -15,6 +16,6 @@
 粵樂	jyut6 ngok6
 羅馬人	lo4 maa5 jan4
 微言大義	mei4 jin4 daai6 ji6
+樂毅	ngok6 ngai6
 私隱政策	si1 jan2 zing3 caak3
-精羅	zing1 lo4
 精神羅馬人	zing1 san4 lo4 maa5 jan4
