--- a/latest.yaml
+++ b/latest.yaml
@@ -1,4 +1,5 @@
 不死鳥	bat1 sei2 niu5
+陳平	can4 ping4
 春秋筆法	ceon1 cau1 bat1 faat3
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
@@ -20,3 +21,4 @@
 私隱政策	si1 jan2 zing3 caak3
 環首刀	waan4 sau2 dou1
 精神羅馬人	zing1 san4 lo4 maa5 jan4
+張良	zoeng1 loeng4
