添加「自定義」

--- a/latest.yaml
+++ b/latest.yaml
@@ -20,5 +20,6 @@
 樂毅	ngok6 ngai6
 私隱政策	si1 jan2 zing3 caak3
 環首刀	waan4 sau2 dou1
+自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 張良	zoeng1 loeng4
