添加［漢宮秋、漢宮秋月］

--- a/latest.yaml
+++ b/latest.yaml
@@ -5,6 +5,8 @@
 廣州城	gwong2 zau1 sing4
 海心橋	hoi2 sam1 kiu4
 海森伯格	hoi2 sam1 baak3 gaak3
+漢宮秋	hon3 gung1 cau1
+漢宮秋月	hon3 gung1 cau1 jyut6
 漁歌	jyu4 go1
 漁歌晚唱	jyu4 go1 maan5 coeng3
 漁舟	jyu4 zau1
