--- a/latest.yaml
+++ b/latest.yaml
@@ -3,6 +3,7 @@
 春秋筆法	ceon1 cau1 bat1 faat3
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
+下品	haa6 ban2
 海心橋	hoi2 sam1 kiu4
 海森伯格	hoi2 sam1 baak3 gaak3
 漢宮秋	hon3 gung1 cau1
@@ -18,6 +19,7 @@
 粵語音韻學	jyut6 jyu5 jam1 wan6 hok6
 粵樂	jyut6 ngok6
 羅馬人	lo4 maa5 jan4
+萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 微言大義	mei4 jin4 daai6 ji6
 樂毅	ngok6 ngai6
 私隱政策	si1 jan2 zing3 caak3
