--- a/latest.yaml
+++ b/latest.yaml
@@ -1,17 +1,17 @@
-不死鳥	bat1 sei2 niu5
-陳平	can4 ping4
+不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
+陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
-海心橋	hoi2 sam1 kiu4
-海森伯格	hoi2 sam1 baak3 gaak3
-漢宮秋	hon3 gung1 cau1
-漢宮秋月	hon3 gung1 cau1 jyut6
+海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021 年落成
+漢宮秋	hon3 gung1 cau1	# 曲名
+漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
+右丞相	jau6 sing4 soeng3
 漁歌	jyu4 go1
-漁歌晚唱	jyu4 go1 maan5 coeng3
+漁歌晚唱	jyu4 go1 maan5 coeng3	# 樂曲名
 漁舟	jyu4 zau1
-漁舟唱晚	jyu4 zau1 coeng3 maan5
+漁舟唱晚	jyu4 zau1 coeng3 maan5	# 古箏曲名
 粵語歌	jyut6 jyu5 go1
 粵語歌曲	jyut6 jyu5 go1 kuk1
 粵語音樂	jyut6 jyu5 jam1 ngok6
@@ -21,10 +21,11 @@
 羅馬人	lo4 maa5 jan4
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 微言大義	mei4 jin4 daai6 ji6
-樂毅	ngok6 ngai6
+樂毅	ngok6 ngai6	# 戰國名將
 私隱政策	si1 jan2 zing3 caak3
 孫文	syun1 man4
-環首刀	waan4 sau2 dou1
+環首刀	waan4 sau2 dou1	# 冷兵器
 自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
+左丞相	zo2 sing4 soeng3
 張良	zoeng1 loeng4
