添加「金針獎」

--- a/latest.yaml
+++ b/latest.yaml
@@ -1,6 +1,7 @@
 不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
+金針獎	gam1 zam1 zoeng2
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
