添加「衛青、霍去病」

--- a/latest.yaml
+++ b/latest.yaml
@@ -1,6 +1,7 @@
 不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
+霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 金針獎	gam1 zam1 zoeng2
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
@@ -26,6 +27,7 @@
 私隱政策	si1 jan2 zing3 caak3
 孫文	syun1 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
+衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 左丞相	zo2 sing4 soeng3
