添加「封禪、法堯禪舜」

--- a/latest.yaml
+++ b/latest.yaml
@@ -1,7 +1,9 @@
 不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
+法堯禪舜	faat3 jiu4 sin6 seon3
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
+封禪	fung1 sin6
 金針獎	gam1 zam1 zoeng2
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
