添加「交州、雍州、豫州、州牧」

--- a/latest.yaml
+++ b/latest.yaml
@@ -4,6 +4,7 @@
 法堯禪舜	faat3 jiu4 sin6 seon3
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 封禪	fung1 sin6
+交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
@@ -12,10 +13,12 @@
 漢宮秋	hon3 gung1 cau1	# 曲名
 漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
 右丞相	jau6 sing4 soeng3
+雍州	jung3 zau1	# 九州之一
 漁歌	jyu4 go1
 漁歌晚唱	jyu4 go1 maan5 coeng3	# 樂曲名
 漁舟	jyu4 zau1
 漁舟唱晚	jyu4 zau1 coeng3 maan5	# 古箏曲名
+豫州	jyu6 zau1	# 九州之一
 粵語歌	jyut6 jyu5 go1
 粵語歌曲	jyut6 jyu5 go1 kuk1
 粵語音樂	jyut6 jyu5 jam1 ngok6
@@ -30,6 +33,7 @@
 孫文	syun1 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
+州牧	zau1 muk6	# 漢代官職
 自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 左丞相	zo2 sing4 soeng3
