添加「陰/陽上去入」

--- a/latest.yaml
+++ b/latest.yaml
@@ -12,7 +12,13 @@
 海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021 年落成
 漢宮秋	hon3 gung1 cau1	# 曲名
 漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
+陰去	jam1 heoi3
+陰入	jam1 jap6
+陰上	jam1 soeng5
 右丞相	jau6 sing4 soeng3
+陽去	joeng4 heoi3
+陽入	joeng4 jap6
+陽上	joeng4 soeng5
 雍州	jung3 zau1	# 九州之一
 漁歌	jyu4 go1
 漁歌晚唱	jyu4 go1 maan5 coeng3	# 樂曲名
