添加「傳統漢字」

--- a/latest.yaml
+++ b/latest.yaml
@@ -1,6 +1,7 @@
 不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
+傳統漢字	cyun4 tung2 hon3 zi6
 法堯禪舜	faat3 jiu4 sin6 seon3
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 封禪	fung1 sin6
