添加「高山仰止」

--- a/latest.yaml
+++ b/latest.yaml
@@ -7,6 +7,7 @@
 封禪	fung1 sin6
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
+高山仰止	gou1 saan1 joeng5 zi2
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
