添加「漢壽亭侯」

--- a/latest.yaml
+++ b/latest.yaml
@@ -14,6 +14,7 @@
 海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021 年落成
 漢宮秋	hon3 gung1 cau1	# 曲名
 漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
+漢壽亭侯	hon3 sau6 ting4 hau4
 陰去	jam1 heoi3
 陰入	jam1 jap6
 陰上	jam1 soeng5
