添加「古人誠不我欺」

--- a/latest.yaml
+++ b/latest.yaml
@@ -8,6 +8,7 @@
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
 高山仰止	gou1 saan1 joeng5 zi2
+古人誠不我欺	gu2 jan4 sing4 bat1 ngo5 hei1
 管仲樂毅	gun2 zung6 ngok6 ngai6
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
@@ -39,6 +40,7 @@
 微言大義	mei4 jin4 daai6 ji6
 樂毅	ngok6 ngai6	# 戰國名將
 私隱政策	si1 jan2 zing3 caak3
+誠不我欺	sing4 bat1 ngo5 hei1
 孫文	syun1 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
