--- a/latest.yaml
+++ b/latest.yaml
@@ -40,6 +40,7 @@
 微言大義	mei4 jin4 daai6 ji6
 樂毅	ngok6 ngai6	# 戰國名將
 私隱政策	si1 jan2 zing3 caak3
+司馬相如	si1 maa5 soeng1 jyu4
 誠不我欺	sing4 bat1 ngo5 hei1
 孫文	syun1 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
