添加漢惠帝、漢景帝、漢光武帝等

--- a/latest.yaml
+++ b/latest.yaml
@@ -11,12 +11,18 @@
 高山仰止	gou1 saan1 joeng5 zi2
 古人誠不我欺	gu2 jan4 sing4 bat1 ngo5 hei1
 管仲樂毅	gun2 zung6 ngok6 ngai6
+光武	gwong1 mou5
+光武帝	gwong1 mou5 dai3
+光武中興	gwong1 mou5 zung1 hing1
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
 海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021 年落成
+漢景帝	hon3 ging2 dai3
 漢宮秋	hon3 gung1 cau1	# 曲名
 漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
+漢光武帝	hon3 gwong1 mou5 dai3
 漢壽亭侯	hon3 sau6 ting4 hau4
+漢惠帝	hon3 wai6 dai3
 陰去	jam1 heoi3
 陰入	jam1 jap6
 陰上	jam1 soeng5
