添加「仁者樂山，智者樂水」

--- a/latest.yaml
+++ b/latest.yaml
@@ -23,6 +23,8 @@
 漢光武帝	hon3 gwong1 mou5 dai3
 漢壽亭侯	hon3 sau6 ting4 hau4
 漢惠帝	hon3 wai6 dai3
+仁者樂山	jan4 ze2 ngaau6 saan1
+仁者樂山，智者樂水	jan4 ze2 ngaau6 saan1 zi3 ze2 ngaau6 seoi2
 陰去	jam1 heoi3
 陰入	jam1 jap6
 陰上	jam1 soeng5
@@ -53,6 +55,7 @@
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 州牧	zau1 muk6	# 漢代官職
+智者樂水	zi3 ze2 ngaau6 seoi2
 自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 左丞相	zo2 sing4 soeng3
