添加「深色模式」

--- a/latest.yaml
+++ b/latest.yaml
@@ -48,6 +48,7 @@
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 微言大義	mei4 jin4 daai6 ji6
 樂毅	ngok6 ngai6	# 戰國名將
+深色模式	sam1 sik1 mou4 sik1
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
 誠不我欺	sing4 bat1 ngo5 hei1
