--- a/latest.yaml
+++ b/latest.yaml
@@ -48,12 +48,15 @@
 羅馬人	lo4 maa5 jan4
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 微言大義	mei4 jin4 daai6 ji6
+我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
 深色模式	sam1 sik1 mou4 sik1
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
+詩社	si1 se5
 誠不我欺	sing4 bat1 ngo5 hei1
 孫文	syun1 man4
+太尉	taai3 wai3
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 州牧	zau1 muk6	# 漢代官職
