--- a/latest.yaml
+++ b/latest.yaml
@@ -51,6 +51,7 @@
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
 深色模式	sam1 sik1 mou4 sik1
+四聲八調	sei3 sing1 baat3 diu6
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
 詩社	si1 se5
