添加 [糞坑, 高級版, 專業版]

--- a/latest.yaml
+++ b/latest.yaml
@@ -4,10 +4,12 @@
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
 傳統漢字	cyun4 tung2 hon3 zi6
 法堯禪舜	faat3 jiu4 sin6 seon3
+糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 封禪	fung1 sin6
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
+高級版	gou1 kap1 baan2
 高山仰止	gou1 saan1 joeng5 zi2
 古人誠不我欺	gu2 jan4 sing4 bat1 ngo5 hei1
 管仲樂毅	gun2 zung6 ngok6 ngai6
@@ -66,3 +68,4 @@
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 左丞相	zo2 sing4 soeng3
 張良	zoeng1 loeng4
+專業版	zyun1 jip6 baan2
