--- a/latest.yaml
+++ b/latest.yaml
@@ -2,6 +2,7 @@
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
+重試	cung4 si3
 傳統漢字	cyun4 tung2 hon3 zi6
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
@@ -31,6 +32,7 @@
 陰入	jam1 jap6
 陰上	jam1 soeng5
 一百分	jat1 baak3 fan1
+一分鐘	jat1 fan1 zung1
 右丞相	jau6 sing4 soeng3
 陽去	joeng4 heoi3
 陽入	joeng4 jap6
@@ -49,6 +51,7 @@
 粵樂	jyut6 ngok6
 羅馬人	lo4 maa5 jan4
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
+密鑰	mat6 joek6
 微言大義	mei4 jin4 daai6 ji6
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
@@ -58,11 +61,13 @@
 司馬相如	si1 maa5 soeng1 jyu4
 詩社	si1 se5
 誠不我欺	sing4 bat1 ngo5 hei1
+逍遙游	siu1 jiu4 jau4
 孫文	syun1 man4
 太尉	taai3 wai3
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 州牧	zau1 muk6	# 漢代官職
+晉語	zeon3 jyu5
 智者樂水	zi3 ze2 ngaau6 seoi2
 自定義	zi6 ding6 ji6
 精神羅馬人	zing1 san4 lo4 maa5 jan4
