--- a/latest.yaml
+++ b/latest.yaml
@@ -3,6 +3,7 @@
 春秋筆法	ceon1 cau1 bat1 faat3
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
 重試	cung4 si3
+傳承字形	cyun4 sing4 zi6 jing4
 傳統漢字	cyun4 tung2 hon3 zi6
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
@@ -10,6 +11,7 @@
 封禪	fung1 sin6
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
+舊字形	gau6 zi6 jing4
 高級版	gou1 kap1 baan2
 高山仰止	gou1 saan1 joeng5 zi2
 古人誠不我欺	gu2 jan4 sing4 bat1 ngo5 hei1
@@ -19,7 +21,7 @@
 光武中興	gwong1 mou5 zung1 hing1
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
-海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021 年落成
+海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021年落成
 漢景帝	hon3 ging2 dai3
 漢宮秋	hon3 gung1 cau1	# 曲名
 漢宮秋月	hon3 gung1 cau1 jyut6	# 同上（曲名）
@@ -56,6 +58,7 @@
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
 深色模式	sam1 sik1 mou4 sik1
+新字形	san1 zi6 jing4
 四聲八調	sei3 sing1 baat3 diu6
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
