--- a/latest.yaml
+++ b/latest.yaml
@@ -69,6 +69,7 @@
 太尉	taai3 wai3
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
+胡姬	wu4 gei1
 州牧	zau1 muk6	# 漢代官職
 晉語	zeon3 jyu5
 智者樂水	zi3 ze2 ngaau6 seoi2
