--- a/latest.yaml
+++ b/latest.yaml
@@ -8,6 +8,7 @@
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
+符文	fu4 man4
 封禪	fung1 sin6
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
@@ -52,6 +53,9 @@
 粵語音韻學	jyut6 jyu5 jam1 wan6 hok6
 粵樂	jyut6 ngok6
 羅馬人	lo4 maa5 jan4
+盧恩	lou4 jan1
+盧恩符文	lou4 jan1 fu4 man4
+盧恩字母	lou4 jan1 zi6 mou5
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 密鑰	mat6 joek6
 微言大義	mei4 jin4 daai6 ji6
