--- a/latest.yaml
+++ b/latest.yaml
@@ -1,10 +1,13 @@
-不死鳥	bat1 sei2 niu5	# Phoenix 之意譯
+不死鳥	bat1 sei2 niu5	# 即 Phoenix
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
+淺人	cin2 jan4
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
 重試	cung4 si3
 傳承字形	cyun4 sing4 zi6 jing4
 傳統漢字	cyun4 tung2 hon3 zi6
+嫡長	dik1 zoeng2
+嫡長子	dik1 zoeng2 zi2
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
@@ -69,10 +72,12 @@
 詩社	si1 se5
 誠不我欺	sing4 bat1 ngo5 hei1
 逍遙游	siu1 jiu4 jau4
+書影	syu1 jing2
 孫文	syun1 man4
 太尉	taai3 wai3
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
+唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
 胡姬	wu4 gei1
 州牧	zau1 muk6	# 漢代官職
 晉語	zeon3 jyu5
