添加[沙雕, 沙盒, 沙箱]

--- a/latest.yaml
+++ b/latest.yaml
@@ -65,6 +65,9 @@
 微言大義	mei4 jin4 daai6 ji6
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
+沙雕	saa1 diu1
+沙盒	saa1 hap6
+沙箱	saa1 soeng1
 深色模式	sam1 sik1 mou4 sik1
 新字形	san1 zi6 jing4
 四聲八調	sei3 sing1 baat3 diu6
