添加「燕然山」

--- a/latest.yaml
+++ b/latest.yaml
@@ -41,6 +41,10 @@
 一百分	jat1 baak3 fan1
 一分鐘	jat1 fan1 zung1
 右丞相	jau6 sing4 soeng3
+燕然	jin1 jin4
+燕然山	jin1 jin4 saan1
+燕然勒功	jin1 jin4 lak6 gung1
+燕然勒石	jin1 jin4 lak6 sek6
 陽去	joeng4 heoi3
 陽入	joeng4 jap6
 陽上	joeng4 soeng5
@@ -56,6 +60,7 @@
 粵語音韻	jyut6 jyu5 jam1 wan6
 粵語音韻學	jyut6 jyu5 jam1 wan6 hok6
 粵樂	jyut6 ngok6
+勒石燕然	lak6 sek6 jin1 jin4
 羅馬人	lo4 maa5 jan4
 盧恩	lou4 jan1
 盧恩符文	lou4 jan1 fu4 man4
