添加[快慢, 好快, 好慢]

--- a/latest.yaml
+++ b/latest.yaml
@@ -8,6 +8,7 @@
 傳統漢字	cyun4 tung2 hon3 zi6
 嫡長	dik1 zoeng2
 嫡長子	dik1 zoeng2 zi2
+快慢	faai3 maan6
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
@@ -33,6 +34,8 @@
 漢光武帝	hon3 gwong1 mou5 dai3
 漢壽亭侯	hon3 sau6 ting4 hau4
 漢惠帝	hon3 wai6 dai3
+好快	hou2 faai3
+好慢	hou2 maan6
 仁者樂山	jan4 ze2 ngaau6 saan1
 仁者樂山，智者樂水	jan4 ze2 ngaau6 saan1 zi3 ze2 ngaau6 seoi2
 陰去	jam1 heoi3
