添加「全唐詩」

--- a/latest.yaml
+++ b/latest.yaml
@@ -5,6 +5,7 @@
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
 重試	cung4 si3
 傳承字形	cyun4 sing4 zi6 jing4
+全唐詩	cyun4 tong4 si1
 傳統漢字	cyun4 tung2 hon3 zi6
 嫡長	dik1 zoeng2
 嫡長子	dik1 zoeng2 zi2
