--- a/latest.yaml
+++ b/latest.yaml
@@ -45,6 +45,7 @@
 一百分	jat1 baak3 fan1
 一分鐘	jat1 fan1 zung1
 右丞相	jau6 sing4 soeng3
+而非	ji4 fei1
 燕然	jin1 jin4
 燕然山	jin1 jin4 saan1
 燕然勒功	jin1 jin4 lak6 gung1
