--- a/latest.yaml
+++ b/latest.yaml
@@ -64,7 +64,14 @@
 粵語音樂	jyut6 jyu5 jam1 ngok6
 粵語音韻	jyut6 jyu5 jam1 wan6
 粵語音韻學	jyut6 jyu5 jam1 wan6 hok6
+粵語聲調	jyut6 jyu5 sing1 diu6
+粵語聲母	jyut6 jyu5 sing1 mou5
+粵語韻母	jyut6 jyu5 wan6 mou5
 粵樂	jyut6 ngok6
+粵拼聲調	jyut6 ping3 sing1 diu6
+粵拼聲母	jyut6 ping3 sing1 mou5
+粵拼韻母	jyut6 ping3 wan6 mou5
+奇奇怪怪	kei4 kei4 gwaai3 gwaai3
 勒石燕然	lak6 sek6 jin1 jin4
 羅馬人	lo4 maa5 jan4
 盧恩	lou4 jan1
