Add several items

--- a/latest.yaml
+++ b/latest.yaml
@@ -7,9 +7,12 @@
 傳承字形	cyun4 sing4 zi6 jing4
 全唐詩	cyun4 tong4 si1
 傳統漢字	cyun4 tung2 hon3 zi6
+大明	daai6 ming4
+大宋	daai6 sung3
 嫡長	dik1 zoeng2
 嫡長子	dik1 zoeng2 zi2
 快慢	faai3 maan6
+翻頁	faan1 jip6
 法堯禪舜	faat3 jiu4 sin6 seon3
 糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
@@ -28,6 +31,7 @@
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
 後知後覺	hau6 zi1 hau6 gok3
+開發者	hoi1 faat3 ze2
 海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021年落成
 漢景帝	hon3 ging2 dai3
 漢宮秋	hon3 gung1 cau1	# 曲名
@@ -50,6 +54,7 @@
 燕然山	jin1 jin4 saan1
 燕然勒功	jin1 jin4 lak6 gung1
 燕然勒石	jin1 jin4 lak6 sek6
+熱鍵	jit6 gin6
 陽去	joeng4 heoi3
 陽入	joeng4 jap6
 陽上	joeng4 soeng5
@@ -77,9 +82,12 @@
 盧恩	lou4 jan1
 盧恩符文	lou4 jan1 fu4 man4
 盧恩字母	lou4 jan1 zi6 mou5
+陸梁	luk6 loeng4	# 先秦稱今之嶺南爲陸梁
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
 密鑰	mat6 joek6
 微言大義	mei4 jin4 daai6 ji6
+明朝日	ming4 ziu1 jat6
+望聞問切	mong6 man4 man6 cit3
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
 沙雕	saa1 diu1
@@ -96,6 +104,7 @@
 書影	syu1 jing2
 孫文	syun1 man4
 太尉	taai3 wai3
+天光日	tin1 gwong1 jat6
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
@@ -107,4 +116,5 @@
 精神羅馬人	zing1 san4 lo4 maa5 jan4
 左丞相	zo2 sing4 soeng3
 張良	zoeng1 loeng4
+昨暝日	zok6 ming4 jat6
 專業版	zyun1 jip6 baan2
