--- a/latest.yaml
+++ b/latest.yaml
@@ -46,6 +46,7 @@
 陰去	jam1 heoi3
 陰入	jam1 jap6
 陰上	jam1 soeng5
+人到中年	jan4 dou3 zung1 nin4
 一百分	jat1 baak3 fan1
 一分鐘	jat1 fan1 zung1
 右丞相	jau6 sing4 soeng3
@@ -117,4 +118,10 @@
 左丞相	zo2 sing4 soeng3
 張良	zoeng1 loeng4
 昨暝日	zok6 ming4 jat6
+中年婦女	zung1 nin4 fu5 neoi5
+中年男人	zung1 nin4 naam4 jan2
+中年男人	zung1 nin4 naam4 jan4
+中年男女	zung1 nin4 naam4 neoi5
+中年女人	zung1 nin4 neoi5 jan2
+中年女人	zung1 nin4 neoi5 jan4
 專業版	zyun1 jip6 baan2
