--- a/latest.yaml
+++ b/latest.yaml
@@ -14,6 +14,7 @@
 快慢	faai3 maan6
 翻頁	faan1 jip6
 法堯禪舜	faat3 jiu4 sin6 seon3
+發滾	faat3 gwan2
 糞坑	fan3 haang1
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 符文	fu4 man4
@@ -85,6 +86,7 @@
 盧恩字母	lou4 jan1 zi6 mou5
 陸梁	luk6 loeng4	# 先秦稱今之嶺南爲陸梁
 萬般皆下品	maan6 bun1 gaai1 haa6 ban2
+猛猛	maang5 maang5
 密鑰	mat6 joek6
 微言大義	mei4 jin4 daai6 ji6
 明朝日	ming4 ziu1 jat6
