添加「又冇」、「鎮政府」

--- a/latest.yaml
+++ b/latest.yaml
@@ -51,6 +51,9 @@
 一百分	jat1 baak3 fan1
 一分鐘	jat1 fan1 zung1
 右丞相	jau6 sing4 soeng3
+又冇	jau6 mou5
+又冇人	jau6 mou5 jan4
+又冇話	jau6 mou5 waa6
 而非	ji4 fei1
 燕然	jin1 jin4
 燕然山	jin1 jin4 saan1
@@ -112,6 +115,7 @@
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
 胡姬	wu4 gei1
+鎮政府	zan3 zing3 fu2
 州牧	zau1 muk6	# 漢代官職
 晉語	zeon3 jyu5
 智者樂水	zi3 ze2 ngaau6 seoi2
