--- a/latest.yaml
+++ b/latest.yaml
@@ -84,6 +84,9 @@
 粵拼聲母	jyut6 ping3 sing1 mou5
 粵拼韻母	jyut6 ping3 wan6 mou5
 奇奇怪怪	kei4 kei4 gwaai3 gwaai3
+擸𢶍	laap6 saap3
+垃圾灣	laap6 saap3 waan1
+擸𢶍灣	laap6 saap3 waan1
 勒石燕然	lak6 sek6 jin1 jin4
 羅馬人	lo4 maa5 jan4
 盧恩	lou4 jan1
