添加「修讀」、「帖文」

--- a/latest.yaml
+++ b/latest.yaml
@@ -108,6 +108,7 @@
 神荼	sna1 syu1	# 門神之一
 神荼鬱壘	sna1 syu1 wat1 leot6	# 門神
 新字形	san1 zi6 jing4
+修讀	sau1 duk6
 四聲八調	sei3 sing1 baat3 diu6
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
@@ -118,6 +119,7 @@
 孫文	syun1 man4
 太尉	taai3 wai3
 天光日	tin1 gwong1 jat6
+帖文	tip3 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
