--- a/latest.yaml
+++ b/latest.yaml
@@ -21,6 +21,7 @@
 霍去病	fok3 heoi3 bing6	# 漢代名將，驃騎將軍、冠軍侯
 符文	fu4 man4
 封禪	fung1 sin6
+介音	gaai3 jam1
 交州	gaau1 zau1	# 地名，始於漢代
 金針獎	gam1 zam1 zoeng2
 舊字形	gau6 zi6 jing4
