--- a/latest.yaml
+++ b/latest.yaml
@@ -106,8 +106,8 @@
 沙盒	saa1 hap6
 沙箱	saa1 soeng1
 深色模式	sam1 sik1 mou4 sik1
-神荼	sna1 syu1	# 門神之一
-神荼鬱壘	sna1 syu1 wat1 leot6	# 門神
+神荼	san1 syu1	# 門神之一
+神荼鬱壘	san1 syu1 wat1 leot6	# 門神
 新字形	san1 zi6 jing4
 修讀	sau1 duk6
 四聲八調	sei3 sing1 baat3 diu6
