Create Swift project

--- a/latest.yaml
+++ b/latest.yaml
@@ -124,7 +124,7 @@
 環首刀	waan4 sau2 dou1	# 冷兵器
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
-鬱壘	swat1 leot6	# 門神之一
+鬱壘	wat1 leot6	# 門神之一
 胡姬	wu4 gei1
 鎮政府	zan3 zing3 fu2
 州牧	zau1 muk6	# 漢代官職
