--- a/.editorconfig
+++ b/.editorconfig
@@ -5,5 +5,8 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 
-[*.yaml]
+[latest.yaml]
+indent_style = tab
+
+[patches/*.yaml]
 indent_style = tab
