--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: UserLexicon SwiftRun
-        run: swift run
+        run: swift run -c release
