添加「下衣」、「下衣失蹤」

--- a/latest.yaml
+++ b/latest.yaml
@@ -34,6 +34,8 @@
 光武中興	gwong1 mou5 zung1 hing1
 廣州城	gwong2 zau1 sing4
 下品	haa6 ban2
+下衣	haa6 ji1
+下衣失蹤	haa6 ji1 sat1 zung1
 後知後覺	hau6 zi1 hau6 gok3
 開發者	hoi1 faat3 ze2
 海心橋	hoi2 sam1 kiu4	# 珠江人行橋，2021年落成
