添加「豌豆莢」

--- a/latest.yaml
+++ b/latest.yaml
@@ -129,6 +129,7 @@
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
 鬱壘	wat1 leot6	# 門神之一
 胡姬	wu4 gei1
+豌豆莢	wun2 dau6 gaap3
 鎮政府	zan3 zing3 fu2
 州牧	zau1 muk6	# 漢代官職
 晉語	zeon3 jyu5
