添加「滑動輸入」、「滑行輸入」

--- a/latest.yaml
+++ b/latest.yaml
@@ -125,6 +125,8 @@
 天光日	tin1 gwong1 jat6
 帖文	tip3 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
+滑動輸入	waat6 dung6 syu1 jap6
+滑行輸入	waat6 hang4 syu1 jap6
 衛青	wai6 cing1	# 漢代名將，大將軍、長平侯
 唯女子與小人爲難養也	wai4 neoi5 zi2 jyu5 siu2 jan4 wai4 naan4 joeng5 jaa5
 鬱壘	wat1 leot6	# 門神之一
