添加「月兔」、「菜椒」、「甜椒」

--- a/latest.yaml
+++ b/latest.yaml
@@ -5,6 +5,7 @@
 春秋筆法	ceon1 cau1 bat1 faat3
 淺人	cin2 jan4
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
+菜椒	coi3 ziu1
 重試	cung4 si3
 傳承字形	cyun4 sing4 zi6 jing4
 全唐詩	cyun4 tong4 si1
@@ -81,6 +82,7 @@
 粵語音韻學	jyut6 jyu5 jam1 wan6 hok6
 粵語聲調	jyut6 jyu5 sing1 diu6
 粵語聲母	jyut6 jyu5 sing1 mou5
+月兔	jyut6 tou3
 粵語韻母	jyut6 jyu5 wan6 mou5
 粵樂	jyut6 ngok6
 粵拼聲調	jyut6 ping3 sing1 diu6
@@ -122,6 +124,7 @@
 孫文	syun1 man4
 雪豆	syut3 dau6
 太尉	taai3 wai3
+甜椒	tim4 ziu1
 天光日	tin1 gwong1 jat6
 帖文	tip3 man4
 環首刀	waan4 sau2 dou1	# 冷兵器
