--- a/latest.yaml
+++ b/latest.yaml
@@ -1,5 +1,6 @@
 啞吃	aa2 gat1
 阿吃	aa3 gat1
+鴨髀	aap3 bei2
 不死鳥	bat1 sei2 niu5	# 即 Phoenix
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
@@ -67,6 +68,7 @@
 燕然勒功	jin1 jin4 lak6 gung1
 燕然勒石	jin1 jin4 lak6 sek6
 熱鍵	jit6 gin6
+羊髀	joeng4 bei2
 陽去	joeng4 heoi3
 陽入	joeng4 jap6
 陽上	joeng4 soeng5
@@ -105,6 +107,8 @@
 微言大義	mei4 jin4 daai6 ji6
 明朝日	ming4 ziu1 jat6
 望聞問切	mong6 man4 man6 cit3
+牛髀	ngau4 bei2
+鵝髀	ngo4 bei2
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
 沙雕	saa1 diu1
