--- a/latest.yaml
+++ b/latest.yaml
@@ -96,6 +96,7 @@
 垃圾灣	laap6 saap3 waan1
 擸𢶍灣	laap6 saap3 waan1
 勒石燕然	lak6 sek6 jin1 jin4
+凌霄殿	ling4 siu1 din6
 羅馬人	lo4 maa5 jan4
 盧恩	lou4 jan1
 盧恩符文	lou4 jan1 fu4 man4
@@ -119,6 +120,7 @@
 神荼鬱壘	san1 syu1 wat1 leot6	# 門神
 新字形	san1 zi6 jing4
 修讀	sau1 duk6
+捨身取義	se2 san1 ceoi2 ji6
 四聲八調	sei3 sing1 baat3 diu6
 私隱政策	si1 jan2 zing3 caak3
 司馬相如	si1 maa5 soeng1 jyu4
