添加「青天白日滿地紅」

--- a/latest.yaml
+++ b/latest.yaml
@@ -5,6 +5,7 @@
 陳平	can4 ping4	# 漢代謀士，左丞相、曲逆侯
 春秋筆法	ceon1 cau1 bat1 faat3
 淺人	cin2 jan4
+青天白日滿地紅	cing1 tin1 baak6 jat6 mun5 dei6 hung4
 初學粵音切要	co1 hok6 jyut6 jam1 cit3 jiu3
 菜椒	coi3 ziu1
 重試	cung4 si3
@@ -112,6 +113,7 @@
 鵝髀	ngo4 bei2
 我手寫我口	ngo5 sau2 se2 ngo5 hau2
 樂毅	ngok6 ngai6	# 戰國名將
+年例	nin4 lai6
 沙雕	saa1 diu1
 沙盒	saa1 hap6
 沙箱	saa1 soeng1
