添加「賢良淑德」

--- a/latest.yaml
+++ b/latest.yaml
@@ -68,6 +68,7 @@
 燕然山	jin1 jin4 saan1
 燕然勒功	jin1 jin4 lak6 gung1
 燕然勒石	jin1 jin4 lak6 sek6
+賢良淑德	jin4 loeng4 suk6 dak1
 熱鍵	jit6 gin6
 羊髀	joeng4 bei2
 陽去	joeng4 heoi3
